# ioe-python

./: CHANGELOG.md  Makefile  README.md  REFERENCE.md  check.sh  install-bullseye.sh  install.sh  pyproject.toml
.github/workflows/: qa.yml
docs/: encoder.md  motor.md  servo.md
examples/: analog.py  basic-test-cycles.py  button.py  mics6814.py  pir.py  potentiometer.py  pwm.py  rgbled.py  rotary.py  servo.py  superio-all-adc.py  superio-all-pwm.py  superio-pwm.py  weather.py
ioexpander/: __init__.py  common.py  devices.py  encoder.py  ioe_regs.py  motor.py  servo.py  sioe_regs.py
tests/: conftest.py  test_io.py  test_setup.py  test_switch_counter.py
